<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBDAD6"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#DBDAD6"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="150dp"
                android:maxHeight="150dp"
                android:scaleType="fitCenter"
                android:layout_marginLeft="3dp"
                android:src="@drawable/fe"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="#5B0000"
            android:gravity="center"
            android:hint="@string/myprofile"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/name_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/name_profile" />

            <EditText
                android:id="@+id/name_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/username_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/username_profile" />

            <EditText
                android:id="@+id/username_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/email_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/email_profile" />

            <EditText
                android:id="@+id/email_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/age_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/age_profile" />

            <EditText
                android:id="@+id/age_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/description_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/description_profile" />

            <EditText
                android:id="@+id/description_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/occupation_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#BCBDAB"
                android:layout_marginTop="@dimen/textview_top5"
                android:text="@string/occupation_profile" />

            <EditText
                android:id="@+id/occupation_acct_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8D0603"
                android:layout_marginTop="@dimen/textview_top5"
                android:inputType="text"
                android:imeOptions="flagNoExtractUi"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/textview_top10"/>

    </LinearLayout>

</ScrollView>