<resources>
    <string name="app_name">Dating Website</string>
    <string name="myinfo_edittext">Pena, Zoila Haro 6/7/2018</string>
    <string name="header">Online Dating Sign-up</string>
    <string name="feedbacktitle">Enter your name</string>
    <string name="feedbackemail">Enter your email</string>
    <string name="feedbackusername">Enter your user name</string>
    <string name="feedbackage">Enter your age</string>
    <string name="feedbackdob">Enter your date of birth</string>

    <string name="agetoast">You must be 18 or older.</string>
    <string name="yeartoast">Year must be greater than current year.</string>
    <string name="myinfo">My info</string>
    <string name="name">Name  </string>
    <string name="username">User Name  </string>
    <string name="age">Age  </string>
    <string name="email">Email  </string>
    <string name="dob">DOB </string>
    <string name="description">Enter Description</string>
    <string name="display_description">Description</string>
    <string name="occupation">Enter Occupation</string>
    <string name="display_occupation">Occupation</string>


    <string name="name_profile">Name:</string>
    <string name="username_profile">User Name:</string>
    <string name="age_profile">Age:</string>
    <string name="email_profile">Email:</string>
    <string name="dob_profile">DOB: </string>
    <string name="description_profile">Description:</string>
    <string name="occupation_profile">Occupation:</string>



    <string name="signup">Sign-up</string>
   <string name="register_form_text">Sign-up</string>
    <string name="no_field_can_be_empty">No field can be empty</string>
    <string name="here_is_values">Here is values: %1$s</string>
    <string name="getdate">Get Date</string>
    <string name="pickdate">Pick-Date</string>
    <string name="select">Select Date</string>
    <string name="main">Main</string>
    <string name="confirmation">Confirmation Page</string>
    <string name="confmessage">Welcome </string>
    <string name="gobackbutton">Go Back</string>

    <string name="testzoila">Zoila</string>
    <string name="testemail">zoila@myemail.com"</string>
    <string name="testusername">butterfly</string>

    <string name="myprofile">My Profile</string>

    <string name="dash">-</string>


    <string name="action_goback">Go Back</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>


    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>

    <string name="profileFrag_name">Profile_Fragname</string>
    <string name="profileFrag_username">Profile_Fragusername</string>
    <string name="profileFrag_email">Profile_Fragemail</string>
    <string name="profileFrag_age">Profile_Fragage</string>
    <string name="profileFrag_occupation">Profile_FragOccupation</string>
    <string name="profileFrag_description">Profile_FragDesc</string>

    <string name="score_value">Score value: %d</string>
    <string name="Action">Action</string>

    <string name="like">Like</string>
    <string name="liketoast">Thanks for liking!</string>

    <string name="settings_id">ID</string>
    <string name="settings_name">Name: </string>
    <string name="settings_email">Email: </string>
    <string name="settings_reminderTime">Reminder Time: </string>
    <string name="settings_maxdistance">Max Distance: </string>
    <string name="setting_gender">Gender: </string>
    <string name="setting_status">Status: </string>
    <string name="setting_agemin">Age Min: </string>
    <string name="setting_agemax">Age Max: </string>
    <string name="update">Update: </string>
    <string name="delete">Delete: </string>
    <string name="photoUrl">PhotoUrl: </string>

    <string name="settings_id_edittext">ID</string>
    <string name="setting_name_edittext">Name</string>
    <string name="setting_email_edittext">Email</string>
    <string name="setting_reminderTime_edittext">Reminder Time</string>
    <string name="settings_maxdistance_edittext">Max Distance</string>
    <string name="setting_gender_edittext">Gender</string>
    <string name="setting_status_edittext">Status</string>
    <string name="setting_agemin_edittext">Age Min</string>
    <string name="setting_agemax_edittext">Age Max</string>
    <string name="update_edittext">Update</string>
    <string name="delete_edittext">Delete</string>
    <string name="photoUrl_edittext">PhotoUrl</string>


    <string name ="mysettings">My Settings</string>
    <string name ="maxDistance">Max Distance</string>
    <string name ="privacy">Privacy</string>

    <string name="pause">Pause Location Updates</string>
    <string name="resume">Resume Location Updates</string>
    <string name="hello_world">Hello world!</string>

    <string name="go_to_location_example">Go To Location Example</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="network_provider_update">Network Provider update</string>

    <string name="TenmilesinMeters">TenMiles</string>

</resources>
